# tree-cloud-drive

./: .gitignore  README.md  pyproject.toml
scripts/: bump-version.py  dev.py  setup-initial-dev-environment.sh
src/tree_cloud_drive/: __main__.py  app.py  main_window.py
src/tree_cloud_drive/assets/ui/: information_dock.ui  main_window.ui  preferences_dialog.ui  splitter_dock.ui
src/tree_cloud_drive/core/: history.py  paths.py  remotes.py  settings.py  ui_loader.py  window_state.py  workers.py
src/tree_cloud_drive/dialogs/: __init__.py  about.py  command_palette.py  download_dialog.py  error_dialog.py  preferences.py
tests/: test_smoke.py
